Fix breadcrumbs spacing issues

--- a/scss/components/navigation/_breadcrumbs.scss
+++ b/scss/components/navigation/_breadcrumbs.scss
@@ -28,6 +28,9 @@
 
   .breadcrumbs--link {
     @include seg-control--link;
+    @include pv(1);
+    @include ph(2);
+    @include lh-scale(1.083);
     font-weight: normal;
     color: darken($primary, 12%);
     white-space: nowrap;
@@ -52,6 +55,9 @@
 
   .breadcrumbs--last {
     @include seg-control--link;
+    @include pv(1);
+    @include ph(2);
+    @include lh-scale(1.083);
     font-weight: normal;
     color: $grey-darker;
     cursor: default;
